Removed text-rendering: optimizeLegibility to prevent Chrome bug that turned some of the content text to gibberish

--- a/sites/all/themes/fj16/sass/base/_fonts.scss
+++ b/sites/all/themes/fj16/sass/base/_fonts.scss
@@ -4,7 +4,6 @@
     font-family: 'Exo2';
     src: url('../fonts/Exo2.0-Regular-webfont.eot');
     src: url('../fonts/Exo2.0-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo2.0-Regular-webfont.woff2') format('woff2'),
          url('../fonts/Exo2.0-Regular-webfont.woff') format('woff'),
          url('../fonts/Exo2.0-Regular-webfont.ttf') format('truetype'),
          url('../fonts/Exo2.0-Regular-webfont.svg#exo_2.0regular') format('svg');
